# bankbot

./: Cargo.toml  README.md  flake.nix
.github/workflows/: build-release-assets.yml
src/: job.rs  lib.rs  local_queue.rs  main.rs
src/api/: cargo.rs  git.rs  mod.rs  rhai.rs
