[package]
name = "bankbot"
version = "0.1.0"
authors = ["Koen Wilde <koen@parity.io>"]
edition = "2018"
license = "Apache-2.0"
default-run = "bbot-run"

[dependencies]
tide = "0.16"
async-std = { version = "1.8", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tide-github = { path = "../tide-github" }
octocrab = "0.15"
log = "0.4"
pretty_env_logger = "0.4"
structopt = "0.3"
indexmap = "1.8"
chrono = "0.4"
surf = "2.3"
git2 = "0.14"
backoff = { version = "0.4", features = ["futures", "async-std"] }
rhai = { version =  "1.6", features = ["sync"] }
anyhow = "1.0"
shell-words = "1.1"
jsonwebtoken = "7.2"
url = "2.2"
tokio = { version = "1.17", features = ["rt", "rt-multi-thread", "macros"] }
async-global-executor = { version = "2.1", features = ["async-io", "tokio"] }
futures-lite = "1.12"

[[bin]]
name = "bbot-run"
src = "src/bbot-run.rs"
