[package]
name = "ci-script"
version = "0.1.0"
authors = ["Koen Wilde <koen@parity.io>"]
edition = "2018"
license = "Apache-2.0"
default-run = "cis"

[dependencies]
tide = "0.16"
async-std = { version = "1.8", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tide-github = "0.3"
octocrab = "0.15"
log = "0.4"
pretty_env_logger = "0.4"
structopt = "0.3"
indexmap = "1.8"
surf = "2.3"
git2 = "0.14"
backoff = { version = "0.4", features = ["futures", "async-std"] }
rhai = { version =  "1.6", features = ["sync"] }
anyhow = "1.0"
shell-words = "1.1"
jsonwebtoken = "7.2"
url = "2.2"
tokio = { version = "1.17", features = ["rt", "rt-multi-thread", "macros"] }
async-global-executor = { version = "2.1", features = ["async-io", "tokio"] }
futures-lite = "1.12"
uuid = { version = "1.1", features = ["v4"] }
toml_edit = "0.14"
walkdir = "2.3"

[[bin]]
name = "cis"
path = "src/bin/ci-script.rs"

[[bin]]
name = "cis-gh-reactor"
path = "src/bin/gh-webhook-reactor.rs"
